# OpenGL_example

./: README.md
0_triangle/: CMakeLists.txt
1_shader_storage_buffer/: CMakeLists.txt
1_shader_storage_buffer/lib/: glew32sd.lib
1_shader_storage_buffer/shader/: ssb_align.txt  ssb_array.txt  ssb_struct.txt
1_shader_storage_buffer/src/: ssb_align.cpp  ssb_array.cpp  ssb_struct.cpp
2_tessalation_shader/: CMakeLists.txt  main.cpp
2_tessalation_shader/analyse/: shader.txt  shader_analyse.txt
2_tessalation_shader/shader/: tcs.txt  tes.txt
2_tessalation_shader/shader-/: tcs_hard_with_triangles.txt  vs.txt
2_tessalation_shader/shader-/quads/: tcs.txt
2_tessalation_shader/shader/quads/: tes.txt
2_tessalation_shader/shader/triangles/: tcs.txt
2_triangle/: main.cpp
2_triangle/lib/: freeglut_staticd.lib
3_controlflow/: CMakeLists.txt  main.cpp
3_controlflow/shader/: controlflow.txt
4_vec_extract/: CMakeLists.txt  main.cpp
4_vec_extract/shader/: cs.txt
5_geometry_shader/: CMakeLists.txt  main.cpp  readme.md
6_geometry_shader_1/: main.cpp
6_geometry_shader_1/lib/: freeglutd.lib
6_geometry_shader_1/shader/: gs.geom
7_if_conversion_case1/: CMakeLists.txt  main.cpp
7_if_conversion_case1/lib/: glew32d.lib
7_if_conversion_case1/shader/: cs.txt  cs_origin.txt
